--- a/index.html
+++ b/index.html
@@ -29,12 +29,35 @@
         <h2 class="Sub-Title"><b>High-Quality Development – The implications to China and the World</b></h2>
         <h2 class="Sub-Title"><b>27-29 November 2024 </b></h2>
         <h2 class="Sub-Title">School of Economics, the University of Adelaide</h2>
+        <P class="MainContentText">
+            The annual conference of the Chinese Economics Society Australia (CESA) aims to attract worldwide scholars interested in addressing significant issues related to the Chinese economy and evaluating the impacts of China’s development on the global economy. The 34th Annual CESA Conference, jointly hosted by the University of South Australia and The University of Adelaide, provides a platform for discussing China’s development and its implications. 
+
+            Over the past few decades, China has ascended as a prominent economic force, providing abundant business prospects for both developing and developed economies due to its rapid economic development and increasing global influence. China’s recent development trajectory underscores a shift towards a more sustainable and innovation-driven growth model. Prioritizing private enterprise development, technological advancements, environmental protection, and social well-being, China aims to enhance the overall quality of economic growth rather than mere GDP expansion. It is imperative to understand this new development focus and its potential implications for the Chinese and world economies. We invite scholars from Australia, China, and other countries to contribute and present research that advances our comprehension of China’s past success, lessons learned, and future directions at the 34th CESA annual conference. 
+
+            We welcome any research topics including but not limited to:
+
+            •	Agriculture and food security 
+            •	Aviation and transport logistics 
+            •	Chinese digital economy
+            •	Climate change
+            •	COVID-19 and its ongoing impacts
+            •	Ecological economics
+            •	Energy economics and finance
+            •	Environmental and resource economics
+            •	FDI, trade and industrial policies in China
+            •	Feminist economics
+            •	Geopolitical risks and political uncertainty 
+            •	Health economics
+            •	Income and wealth inequality
+            •	Innovation and productivity growth
+            •	Macroeconomy and policy implications
+            •	Population and labour market
+            •	Tourism and hospitality
+            
+            Papers that do not fit into these categories but are related to the main theme of the conference, are also welcome. 
+            </P>
     </div>
 
-    <section class="content">
-        
-        <p>这里是网页正文内容...</p>
-    </section>
 
     <footer>
         <p>&copy; dsdsdsds</p>
